--- a/wms-cpp/CMakeLists.txt
+++ b/wms-cpp/CMakeLists.txt
@@ -171,3 +171,5 @@ endif()
 # 这是示例模块，后期可以不编译它
 add_subdirectory ("arch-demo")
 # 在后面添加你的模块
+add_subdirectory ("wms-c3-chuweiguanli")
+add_subdirectory ("wms-c3-kuneiguanli")
