合并分支xiaowang_5_1 解决冲突4_0

--- a/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
+++ b/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
@@ -1,3 +1,19 @@
+tuopan: 
+ id: 主键
+ field: 
+  id: 托盘号
+  order: 托盘顺序
+  place: 诸位
+  status: 托盘状态
+  bpm_status: 流程状态
+  sys_org_code: 所属部门
+  sys_company_code: 所属公司
+ get:
+  summary: 获取托盘列表（条件+分页）
+ put:
+  summary: 修改托盘
+ delete:
+  summary: 删除托盘（支持批量删除）
 TP:
  QueryTPSummary: 获取托盘名称列表
  AddTPSummary: 录入托盘
