--- a/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
+++ b/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
@@ -1,4 +1,25 @@
-﻿chuweixiangxixinxi:
+file:
+ download:
+  summary: 导出空储位
+ field:
+  filename: 文件名
+  file-url: 文件src
+  file-alt: 文件文字描述
+  file-href: 文件链接地址
+store:
+ query-forward: 
+  summary: 查询
+ query-reverse:
+  summary: 查询
+ field:
+  bin_store: 仓库
+  ku_wei_bian_ma: 储位
+  other: 其他
+  znode: 层数
+  xnode: 行数
+  ynode: 列数
+  ting_yong: 停用
+chuweixiangxixinxi:
  bs: 
   bioashi: 唯一标识
  xinxi:
