合并分支时光

--- a/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
+++ b/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
@@ -62,11 +62,13 @@ daoru:
  dr:
   daoruwenjian: 导入文件
   wenjianshangchaun: 导入储位
+  wenjianshangchaunmore: 导入多个储位
   panduanzhi: 是否成功导入
 
 daochu:
  daochuid: 导出唯一ID
  daochuwenjian: 导出储位
+ id_zhi: 2ces35d
 
 tuopan: 
  id: 主键
