合并分支噗叽

--- a/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
+++ b/wms-cpp/wms-c3-chuweiguanli/zh-dict.yaml
@@ -1,4 +1,4 @@
-file:
+﻿file:
  download:
   summary: 导出空储位
  field:
@@ -6,22 +6,6 @@ file:
   file-url: 文件src
   file-alt: 文件文字描述
   file-href: 文件链接地址
-store:
- query-forward: 
-  summary: 查询
- query-reverse:
-  summary: 查询
- field:
-  bin_store: 仓库
-  binid: 储位编码
-  ku_wei_bian_ma: 储位
-  other: 其他
-  znode: 层数
-  xnode: 行数
-  ynode: 列数
-  ting_yong: 停用
-  ku_wei_shu_xing: 储位属性
-  chp_shu_xing: 产品属性
 
 chuweixiangxixinxi:
  bs: 
@@ -150,6 +134,8 @@ store:
   xnode: 行数
   ynode: 列数
   ting_yong: 停用
+  ku_wei_shu_xing: 储位属性
+  chp_shu_xing: 产品属性
 
 chuwei:
  add:
